# ChangeLog for dev-ruby/stomp
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Jan 2010; Lance Albertson <ramereth@gentoo.org> stomp-1.1.3.ebuild:
  Remove dep on dev-ruby/stompserver as its not required.

*stomp-1.1.3 (17 Jan 2010)

  17 Jan 2010; Lance Albertson <ramereth@gentoo.org> +stomp-1.1.3.ebuild,
  +metadata.xml:
  Initial ebuild
