@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*stomp-1.1.5 (08 Jun 2010)
+
+  08 Jun 2010; Lance Albertson <ramereth@gentoo.org> +stomp-1.1.5.ebuild:
+  Version bump, switch to using ruby-fakegem.eclass
+
   19 Jan 2010; Lance Albertson <ramereth@gentoo.org> stomp-1.1.3.ebuild:
   Remove dep on dev-ruby/stompserver as its not required.
 
